<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">


    <string name="app_name">MultiClock</string>

    <!-- ==================================== BOTTOM NAV ==================================== -->
    <string name="alarm">Alarm</string>
    <string name="clock">Clock</string>
    <string name="timer">Timer</string>
    <string name="stopwatch">Stopwatch</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about">About</string>
    <string name="create_alarm">Create Alarm</string>
    <string name="select_time">Select time</string>
    <string name="alarm_notification_content">Some random content here</string>


    <!-- ==================================== TOASTS ==================================== -->

    <string name="alarm_set_for">Alarm set for %1$s from now.</string>
    <string name="alarm_set_for_weekday">Alarm set to repeat every %1$s.</string>
    <string name="day_hour_and_minute">1 day, 1 hour, and 1 minute</string>
    <string name="days_hour_and_minute">%1$d days, 1 hour, and 1 minute</string>
    <string name="days_hours_and_minute">%1$d days, %2$d hours, and 1 minute</string>
    <string name="days_hour_and_minutes">%1$d days, 1 hours, and %3$d minutes</string>
    <string name="days_hours_and_minutes">%1$d days, %2$d hours, and %3$d minutes</string>
    <string name="day_hours_and_minute">1 day, %2$d hours, and 1 minute</string>
    <string name="day_hours_and_minutes">1 day, %2$d hours, and %3$d minutes</string>
    <string name="day_hour_and_minutes">1 day, 1 hour, and %3$d minutes</string>
    <string name="day_and_hour">1 day and 1 hour</string>
    <string name="days_and_hour">%1$d days and 1 hour</string>
    <string name="day_and_hours">1 day and %2$d hours</string>
    <string name="days_and_hours">%1$d days and %2$d hours</string>
    <string name="day_and_minute">1 day and 1 minute</string>
    <string name="days_and_minute">%1$d days and 1 minute</string>
    <string name="day_and_minutes">1 day and %3$d minutes</string>
    <string name="days_and_minutes">%1$d days and %3$d minutes</string>
    <string name="hour_and_minute">1 hour and 1 minute</string>
    <string name="hour_and_minutes">1 hour and %3$d minutes</string>
    <string name="hours_and_minute">%2$d hours and 1 minute</string>
    <string name="hours_and_minutes">%2$d hours and %3$d minutes</string>
    <string name="day">1 day</string>
    <string name="days">%1$d days</string>
    <string name="hour">1 hour</string>
    <string name="hours">%2$d hours</string>
    <string name="minute">1 minute</string>
    <string name="minutes">%3$d minutes</string>
    <string name="less_than_one_minute">less than 1 minute</string>
    <string name="abbrev_days_hours_and_minutes">%1$dd %2$dh %3$dm</string>
    <string name="abbrev_days_and_hours">%1$dd %2$dh</string>
    <string name="abbrev_days_and_minutes">%1$dd %3$dm</string>
    <string name="abbrev_hours_and_minutes">%2$dh %3$dm</string>
    <string name="abbrev_days">%1$dd</string>
    <string name="abbrev_hours">%2$dh</string>
    <string name="abbrev_minutes">%3$dm</string>
    <string name="abbrev_less_than_one_minute">&lt;1m</string>

    <string name="upcoming_alarm_dismissed">%1$s alarm dismissed.</string>
    <string name="no_alarm_yet">No alarm yet</string>
    <string name="need_permission">We need alarm permission</string>
    <string name="permission_helper">In order to be able to use alarms, you need to allow this app to set alarms and reminders</string>
    <string name="allow">Allow</string>
    <string name="later">Later</string>
    <!-- ======================================================================================= -->


    <string name="snooze">Snooze</string>
    <string name="stop">Stop</string>
    <string name="alarm_running">Alarm is running</string>
    <string name="channel_name">Alarm Channel</string>

    <string name="alarm_snoozed">Alarm snoozed for 10 minutes</string>
    <string name="back_icon">Back Icon</string>
    <string name="alarm_details">Alarm Details</string>
    <string name="edit_icon">Edit Icon</string>
    <string name="m">M</string>
    <string name="t">T</string>
    <string name="w">W</string>
    <string name="th">T</string>
    <string name="f">F</string>
    <string name="s">S</string>
    <string name="su">S</string>
    <string name="speaker_icon">Speaker Icon</string>
    <string name="schedule">Schedule</string>
    <string name="vibrate">Vibrate</string>
    <string name="delete">Delete</string>
    <string name="alarm_sound">Alarm Sound</string>
    <string name="your_sounds">Your Sounds</string>
    <string name="add_icon">Add Icon</string>
    <string name="add">Add</string>
    <string name="device_sounds">Device Sounds</string>
    <string name="checked_icon">Checked Icon</string>
    <string name="more_icon">More Icon</string>

    <string name="delete_alarm_title">Are you sure you want to delete this alarm?</string>
    <string name="delete_alarm_message_helper">Alarm will not be scheduled any more</string>
    <string name="deleted">Deleted!</string>
    <string name="cancel">Cancel</string>
    <string name="cancelled">Cancelled</string>
    <string name="no">No</string>

</resources>