<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    >

    <ImageView
        android:id="@+id/ic_sound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/speaker_icon"
        android:src="@drawable/ic_round_sound"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_sound_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintBottom_toBottomOf="@+id/ic_sound"
        app:layout_constraintEnd_toStartOf="@+id/soundPicked"
        app:layout_constraintStart_toEndOf="@+id/ic_sound"
        app:layout_constraintTop_toTopOf="@+id/ic_sound"
        tools:text="Michael Jackson - Bad" />

    <ImageView
        android:id="@+id/soundPicked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/checked_icon"
        android:src="@drawable/ic_check"
        android:layout_marginEnd="10dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/txt_sound_name"
        app:layout_constraintEnd_toStartOf="@+id/ic_more_icon"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/ic_sound"
        app:layout_constraintTop_toTopOf="@+id/txt_sound_name"
        app:layout_constraintVertical_bias="0.428" />

    <ImageView
        android:id="@+id/ic_more_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_more_icon"
        android:contentDescription="@string/more_icon"
        app:layout_constraintBottom_toBottomOf="@+id/soundPicked"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/soundPicked" />


</androidx.constraintlayout.widget.ConstraintLayout>